CR-2008-09-19-0: Cleanup:    o remote_delete_directory():
                                do chown -R to check user if possible before
                                deleting the directory
                             o delete_directory() now is wrapper for
                               remote_delete_directory()
                             o resolve_host() now doing string trim to hostname
                               argument
                             o compile_with_aimk():
                               removed old comments and useless code
                             o test for issue 1422:
                               rework deletion of session directory "~/.sge"
                 Review:     RD

RD-2008-09-19-0: Bugfix:     fixed qalter test
                 Review:     JG

RD-2008-09-18-0: Enhancem.:  added test for qalter -w v scheduler messages
                 Review:     CR

CR-2008-09-18-0: Enhancem.:  o new module test for issue 2728 integrated into
                               module_tests/generic check
                             o The module_tests/generic check now only reports
                               one result for all started module tests
                 Review:     RD

CR-2008-09-16-0: Enhancem.:  system_tests/execd/reconnect now also checks
                             if a restarted execd will connect to qmaster when
                             act_master file contains wrong host and qmaster is not
                             running.
                 Review:     DG

DG-2008-09-15-0: Enhancem.:  Initial test for qresub client added. Test 
                             for issue 2726. 
                 Review:     JG

JF-2008-09-10-0: Fix.:       Fix for Arco test of testsuite issue 113.
                 Review:     AP

JF-2008-09-09-0: Enhancem.:  New test for Arco testsuite issue 113.
                 Review:     AP

DG-2008-09-09-0: Enhancem.:  New test for Grid Engine IZ 2717.
                 Review:     CR
